# franken_snowflake

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_PLAN_FOR_FRANKEN_SNOWFLAKE.md  Cargo.toml  README.md  RELEASE.md  clippy.toml  install.ps1  install.sh  rust-toolchain.toml
.beads/: .gitignore  .manifest.json  config.yaml  issues.jsonl
.github/workflows/: ci.yml
crates/franken-snowflake-auth/: Cargo.toml  build.rs
crates/franken-snowflake-auth/src/: lib.rs  redaction_policy.rs
crates/franken-snowflake-cache/: Cargo.toml
crates/franken-snowflake-cache/src/: lib.rs
crates/franken-snowflake-catalog/: Cargo.toml
crates/franken-snowflake-catalog/src/: discovery.rs  lib.rs  model.rs  operator.rs  planner.rs  predicate.rs
crates/franken-snowflake-cli/: Cargo.toml
crates/franken-snowflake-cli/src/: live.rs  main.rs  mcp_surface.rs
crates/franken-snowflake-core/: Cargo.toml
crates/franken-snowflake-core/src/: adapter.rs  budget.rs  cancel.rs  capabilities.rs  envelope.rs  error.rs  exit.rs  guardrails.rs  ids.rs  lib.rs  outcome.rs  redact.rs  write_intent.rs
crates/franken-snowflake-export/: Cargo.toml
crates/franken-snowflake-export/src/: lib.rs
crates/franken-snowflake-frame/: Cargo.toml
crates/franken-snowflake-frame/src/: lib.rs
crates/franken-snowflake-graph/: Cargo.toml
crates/franken-snowflake-graph/src/: lib.rs
crates/franken-snowflake-http/: Cargo.toml
crates/franken-snowflake-http/src/: lib.rs
crates/franken-snowflake-mcp/: Cargo.toml
crates/franken-snowflake-mcp/src/: lib.rs
crates/franken-snowflake-sqlapi/: Cargo.toml
crates/franken-snowflake-sqlapi/src/: driver.rs  lib.rs  lifecycle.rs  request.rs  response.rs  status.rs  wire.rs
crates/franken-snowflake-sqlapi/tests/: golden.rs  lifecycle.rs  live_proof.rs
crates/franken-snowflake-sqlapi/tests/fixtures/: cancel_response.json  jsonv2_codec_cells.json  jsonv2_codec_cells.source.md  resp_200_multi_statement.json  resp_200_resultset_multi_partition.json  resp_200_resultset_single_partition.json  resp_202_running.json  resp_408_statement_timeout.json  resp_422_failure.json  submit_select_request.json  submit_with_bindings_request.json
crates/franken-snowflake-testkit/: Cargo.toml
crates/franken-snowflake-testkit/fixtures/golden/: default_protocol_replay.golden.json  sample_run.golden.json
crates/franken-snowflake-testkit/src/: e2e.rs  lib.rs  race.rs  replay.rs
crates/franken-snowflake-testkit/src/harness/: canary.rs  clock.rs  golden.rs  logger.rs  mod.rs  paths.rs
crates/franken-snowflake-testkit/src/mock/: http.rs  mod.rs  scenarios.rs  server.rs
crates/franken-snowflake-testkit/tests/: e2e_harness.rs
crates/franken-snowflake-text-indexing/: Cargo.toml
crates/franken-snowflake-text-indexing/src/: lib.rs
crates/franken-snowflake-tui/: Cargo.toml
crates/franken-snowflake-tui/src/: lib.rs
docs/: agent_cli_contract.md  asupersync_leverage.md  cache_repository_design.md  catalog_graph_design.md  dataset_manifest_contract.md  dependency_admissibility.md  downstream_integration_contract.md  live_proof.md  proof_lanes.md  security_model.md  text_indexing_frankensearch_design.md  transport_design.md  write_intent_ladder.md
docs/protocol/: README.md  schema_draft.md
scripts/: check-asupersync-single-version.sh  check-dependency-admissibility.py  check-golden-lf.py  check-install-sh-ui.sh  live-proof.sh
scripts/e2e/: mock-harness.sh
