# franken_snowflake — workspace root.
#
# Phase 0 scaffold (bead fsnow-repo-governance-scaffold-zra): the minimal-five
# crate skeletons plus the workspace-wide lint policy. The remaining crates
# (http, catalog, frame, export, graph, cache, tui, mcp) are added by their
# boundary-owning beads, not in one blind sweep — see
# COMPREHENSIVE_PLAN_FOR_FRANKEN_SNOWFLAKE.md ("Repository Shape").
#
# The toolchain pin (rust-toolchain.toml), the [patch.crates-io] Asupersync
# unification block, and the single-asupersync-version CI gate are owned by
# bead fsnow-native-snowflake-connector-w0i.3. The broader forbidden-dependency
# admissibility harness remains in fsnow-native-snowflake-connector-w0i.7.

[workspace]
resolver = "3"
members = [
    "crates/franken-snowflake-core",
    "crates/franken-snowflake-auth",
    "crates/franken-snowflake-http",
    "crates/franken-snowflake-sqlapi",
    "crates/franken-snowflake-catalog",
    "crates/franken-snowflake-frame",
    "crates/franken-snowflake-graph",
    "crates/franken-snowflake-cache",
    "crates/franken-snowflake-export",
    "crates/franken-snowflake-text-indexing",
    "crates/franken-snowflake-testkit",
    "crates/franken-snowflake-cli",
    "crates/franken-snowflake-mcp",
    "crates/franken-snowflake-tui",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
authors = ["Jeffrey Emanuel"]
repository = "https://github.com/Dicklesworthstone/franken_snowflake"
homepage = "https://github.com/Dicklesworthstone/franken_snowflake"
description = "Clean-room, Asupersync-native Snowflake SQL API connector built for coding agents."
keywords = ["snowflake", "sql-api", "asupersync", "agent", "connector"]
categories = ["database", "api-bindings", "command-line-utilities"]
publish = false

# Workspace lint policy. Crates opt in with `[lints] workspace = true`.
#
#   forbid(unsafe_code)        — no `unsafe` anywhere in the workspace.
#   deny clippy::unwrap_used   — no silent panics on `Option`/`Result`.
#   deny clippy::expect_used   — likewise; surface typed errors instead.
#   deny clippy::panic         — no `panic!` in library/CLI paths.
#   deny clippy::todo          — no `todo!()` placeholders survive a build.
#   deny clippy::dbg_macro      — no stray `dbg!()`.
#
# The `unwrap_used`/`expect_used`/`panic`/`todo`/`dbg_macro` checks are clippy
# restriction lints (verified by `cargo clippy`); `unsafe_code` is enforced by
# `cargo build`.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

[workspace.dependencies]
asupersync = { version = "=0.3.5", default-features = false, features = ["proc-macros", "tls", "tls-native-roots", "compression"] }

# Local FrankenSuite candidate graph. These patches do not admit a crate into
# the production feature graph; they only force one local checkout per crate
# once a later bead proves the dependency is clean and enables it.
# FrankenSuite dependencies resolve from crates.io so franken_snowflake builds
# standalone (externally), not only inside a full /dp FrankenSuite checkout. To
# develop against local sibling checkouts, add a `paths` override in a gitignored
# .cargo/config.toml, e.g. paths = ["/dp/asupersync", "/dp/frankensqlite/crates/fsqlite"].