[package]
name = "franken-snowflake-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Secret-safe Snowflake auth construction (PAT, key-pair JWT, OAuth) for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
rsa = { version = "0.9.10", default-features = false, features = ["std", "pem", "pkcs5", "sha2"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
serde_json = "1"
