[package]
name = "franken-snowflake-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local cache repository contracts for franken_snowflake metadata, receipts, and audit records."
publish.workspace = true

[features]
default = []
frankensqlite = ["dep:sqlmodel-core", "dep:sqlmodel-frankensqlite"]

[lints]
workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
sqlmodel-core = { version = "0.2.2", optional = true }
sqlmodel-frankensqlite = { version = "0.2.2", optional = true }
