[package]
name = "franken-snowflake-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dataset manifests, predicate validation, and safe query planning for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
franken-snowflake-cache = { path = "../franken-snowflake-cache" }
franken-snowflake-core = { path = "../franken-snowflake-core" }
franken-snowflake-sqlapi = { path = "../franken-snowflake-sqlapi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
franken-snowflake-testkit = { path = "../franken-snowflake-testkit" }
