[package]
name = "franken-snowflake-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The agent-ergonomic franken-snowflake CLI binary."
publish.workspace = true

# The installed binary is `franken-snowflake`, matching the documented contract.
[[bin]]
name = "franken-snowflake"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
franken-snowflake-core = { path = "../franken-snowflake-core" }
