[package]
name = "franken-snowflake-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The agent-ergonomic franken-snowflake CLI binary."
publish.workspace = true

# The installed binary is `franken-snowflake`, matching the documented contract.
[[bin]]
name = "franken-snowflake"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
mcp = ["dep:franken-snowflake-mcp", "franken-snowflake-mcp/mcp"]

[dependencies]
franken-snowflake-core = { path = "../franken-snowflake-core" }
franken-snowflake-mcp = { path = "../franken-snowflake-mcp", optional = true }
toon = { package = "tru", version = "0.2.3", default-features = false }
