[package]
name = "franken-snowflake-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The agent-ergonomic franken-snowflake CLI binary."
publish.workspace = true

# The installed binary is `franken-snowflake`, matching the documented contract.
[[bin]]
name = "franken-snowflake"
path = "src/main.rs"

# `fsnow` is the short agent-ergonomic alias (same entry point + identical
# contract). Agents type the connector name constantly; the 5-char form cuts
# keystrokes without changing any behavior. The long name stays canonical for
# documentation and the `invocation` strings in `capabilities`.
[[bin]]
name = "fsnow"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["toon"]
mcp = ["dep:franken-snowflake-mcp", "franken-snowflake-mcp/mcp"]
toon = ["dep:toon"]
# Opt-in live SQL API transport for `query run` / `catalog scan` / `profile
# doctor --online`. Default-off so the agent CLI stays a no-account slice (no
# transport, no asupersync) until live use is explicitly requested. Runtime-gated
# in addition: even with the feature, a command refuses cleanly when a profile's
# credential env handles are absent (never substitutes fixture/empty data).
live = [
    "dep:franken-snowflake-sqlapi",
    "dep:franken-snowflake-http",
    "dep:franken-snowflake-auth",
    "dep:asupersync",
]

[dependencies]
franken-snowflake-core = { path = "../franken-snowflake-core" }
franken-snowflake-mcp = { path = "../franken-snowflake-mcp", optional = true }
franken-snowflake-sqlapi = { path = "../franken-snowflake-sqlapi", optional = true }
franken-snowflake-http = { path = "../franken-snowflake-http", optional = true }
franken-snowflake-auth = { path = "../franken-snowflake-auth", optional = true }
asupersync = { workspace = true, optional = true }
toon = { package = "tru", version = "0.2.3", default-features = false, optional = true }
