[package]
name = "franken-snowflake-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared foundational types for the franken_snowflake Snowflake SQL API connector."
publish.workspace = true

[features]
default = []
adapter-fixtures = []

[lints]
workspace = true

[dependencies]
asupersync = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
