[package]
name = "franken-snowflake-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Content-addressed COPY INTO plans and local CSV/JSONL export receipts for franken_snowflake."
publish.workspace = true

[features]
default = []
export = []

[lints]
workspace = true

[dependencies]
blake3 = "1"
franken-snowflake-core = { path = "../franken-snowflake-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
