[package]
name = "franken-snowflake-frame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Optional fp-columnar/fp-types frame materialization for franken_snowflake result partitions."
publish.workspace = true

[features]
default = []
frankenpandas = ["dep:fp-columnar", "dep:fp-types"]

[lints]
workspace = true

[dependencies]
fp-columnar = { version = "0.1.0", optional = true }
fp-types = { version = "0.1.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
