[package]
name = "franken-snowflake-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Feature-gated MCP server surface (mcp serve) for franken_snowflake, sharing the CLI read-verb handlers."
publish.workspace = true

[features]
default = []
mcp = [
    "dep:fastmcp-rust",
    "dep:serde_json",
]

[lints]
workspace = true

[dependencies]
franken-snowflake-core = { path = "../franken-snowflake-core" }
fastmcp-rust = { version = "0.3.1", optional = true }
serde_json = { version = "1", optional = true }
