[package]
name = "franken-snowflake-sqlapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Snowflake SQL API protocol schemas and cancel-correct statement lifecycle for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
