[package]
name = "franken-snowflake-sqlapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Snowflake SQL API protocol schemas and cancel-correct statement lifecycle for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
# kx6 is pure protocol data + serde + the jsonv2 wire codec: no asupersync, no
# network. The statement lifecycle / transport beads (ofl, https-ofq) add the
# runtime later. Reuses core's identifier newtypes and OutcomeKind.
franken-snowflake-core = { path = "../franken-snowflake-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The shared golden framework (key-sorted canonical JSON, LF discipline) drives
# the fixture round-trip proofs without a live account.
franken-snowflake-testkit = { path = "../franken-snowflake-testkit" }
