[package]
name = "franken-snowflake-sqlapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Snowflake SQL API protocol schemas and cancel-correct statement lifecycle for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
# kx6 schemas + the jsonv2 wire codec are pure serde. The ofl statement
# lifecycle adds the async driver (`driver`), which pumps the pure state machine
# (`lifecycle`) against the Asupersync-native transport and fires the remote
# cancel endpoint on local cancellation. The pure `lifecycle` machine itself
# needs none of these — only `driver` does.
franken-snowflake-core = { path = "../franken-snowflake-core" }
franken-snowflake-http = { path = "../franken-snowflake-http" }
asupersync = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The shared golden framework (key-sorted canonical JSON, LF discipline) drives
# the fixture round-trip proofs without a live account.
franken-snowflake-auth = { path = "../franken-snowflake-auth" }
franken-snowflake-testkit = { path = "../franken-snowflake-testkit" }
