[package]
name = "franken-snowflake-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic no-account Snowflake SQL API testkit (codec lane + mock server) for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
