[package]
name = "franken-snowflake-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic no-account Snowflake SQL API testkit (codec lane + mock server) for franken_snowflake."
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Shared harness deps. `franken-snowflake-core` is used only for the single
# shared secret-needle list (`core::redact`) so the canary leak guard and the
# production redactor cannot drift (see `docs/security_model.md`, "one needle
# list"). serde/serde_json back the deterministic golden + JSON-line lanes.
franken-snowflake-core = { path = "../franken-snowflake-core" }
# kx6 protocol schemas remain the sibling source of truth for fixture shape;
# this edge also keeps the existing lockfile graph stable for code-first checks.
franken-snowflake-sqlapi = { path = "../franken-snowflake-sqlapi" }
asupersync = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
